# jni-sys

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
doc/v0.1.0/: search-index.js
doc/v0.1.0/jni_sys/: constant.JNI_ABORT.html  constant.JNI_COMMIT.html  constant.JNI_EDETACHED.html  constant.JNI_EEXIST.html  constant.JNI_EINVAL.html  constant.JNI_ENOMEM.html  constant.JNI_ERR.html  constant.JNI_EVERSION.html  constant.JNI_FALSE.html  constant.JNI_OK.html  constant.JNI_TRUE.html  enum.jobjectRefType.html  index.html  sidebar-items.js  struct.JNIEnv_.html  struct.JNIInvokeInterface_.html  struct.JNINativeInterface_.html  struct.JNINativeMethod.html  struct.JavaVMAttachArgs.html  struct.JavaVMInitArgs.html  struct.JavaVMOption.html  struct._jfieldID.html  struct._jmethodID.html  struct._jobject.html  struct.jvalue.html  type.JNIEnv.html  type.JavaVM.html  type.jarray.html  type.jboolean.html  type.jbooleanArray.html  type.jbyte.html  type.jbyteArray.html  type.jchar.html  type.jcharArray.html  type.jclass.html  type.jdouble.html  type.jdoubleArray.html  type.jfieldID.html  type.jfloat.html  type.jfloatArray.html  (+14 more)
doc/v0.2.0/: search-index.js
doc/v0.2.0/jni_sys/: JNIEnv.t.html  JNIEnv_.t.html  JNIInvokeInterface_.t.html  JNINativeInterface_.t.html  JNINativeMethod.t.html  JNI_ABORT.v.html  JNI_COMMIT.v.html  JNI_EDETACHED.v.html  JNI_EEXIST.v.html  JNI_EINVAL.v.html  JNI_ENOMEM.v.html  JNI_ERR.v.html  JNI_EVERSION.v.html  JNI_FALSE.v.html  JNI_OK.v.html  JNI_TRUE.v.html  JNI_VERSION_1_1.v.html  JNI_VERSION_1_2.v.html  JNI_VERSION_1_4.v.html  JNI_VERSION_1_6.v.html  JNI_VERSION_1_8.v.html  JavaVM.t.html  JavaVMAttachArgs.t.html  JavaVMInitArgs.t.html  JavaVMOption.t.html  _jfieldID.t.html  _jmethodID.t.html  _jobject.t.html  constant.JNI_ABORT.html  constant.JNI_COMMIT.html  constant.JNI_EDETACHED.html  constant.JNI_EEXIST.html  (+83 more)
examples/: hello.rs
jni-sys-macros/: Cargo.toml
jni-sys-macros/src/: lib.rs
jni-to-union-macro/: Cargo.toml
jni-to-union-macro/src/: lib.rs
src/: lib.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: jni-to-union.rs
tests/trybuild/: 01-jni-fail-read-1-2-from-1-1.rs  01-jni-fail-read-1-2-from-1-1.stderr  01-jni-fail-reserved-read.rs  01-jni-fail-reserved-read.stderr  01-jni-to-union-basic-pass.rs
(+8 files in other folders)
