[package]
name = "jni-sys"
version = "0.2.3"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Rust definitions corresponding to jni.h"
repository = "https://github.com/sfackler/rust-jni-sys"
documentation = "https://docs.rs/jni-sys/0.2.3/jni_sys"
readme = "README.md"

[dependencies]

[workspace]
members = ["systest"]

[replace]
"ctest:0.1.3" = { git = "https://github.com/sfackler/ctest" }
