[package]
name = "jni-sys"
version = "0.4.1"
authors = [
    "Steven Fackler <sfackler@gmail.com>",
    "Robert Bragg <robert@sixbynine.org>",
]
license = "MIT OR Apache-2.0"
description = "Rust definitions corresponding to jni.h"
repository = "https://github.com/jni-rs/jni-sys"
documentation = "https://docs.rs/jni-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
keywords = ["java", "jni"]
edition = "2021"
rust-version = "1.76.0"
exclude = ["/.github", "/tests"]

[[example]]
name = "hello"
required-features = ["jvm_examples"]

[dependencies]
jni-sys-macros = { version = "0.4.1", path = "jni-sys-macros" }

[dev-dependencies]
trybuild = "1"
thiserror = "1"

[features]
default = ["jvm_examples"]
jvm_examples = []

[workspace]
members = ["systest", "jni-sys-macros"]
